[gd_scene load_steps=40 format=2]

[ext_resource path="res://world/map_generated/MapGenerated.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/markers/Markers.gd" type="Script" id=2]
[ext_resource path="res://world/overlay/treasure/misc_treasure/MiscTreasure.png" type="Texture" id=3]
[ext_resource path="res://world/door/DoorFore.gd" type="Script" id=4]
[ext_resource path="res://world/overlay/treasure/Treasure.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemy/enemyfiend/EnemyFiend.tscn" type="PackedScene" id=7]
[ext_resource path="res://world/dungeon/Dungeon.tscn" type="PackedScene" id=8]
[ext_resource path="res://world/map_generated/wallblades/WallBlades_1.png" type="Texture" id=9]
[ext_resource path="res://world/door/Doors.tres" type="TileSet" id=10]
[ext_resource path="res://world/map_generated/wallblades/WallBlades_2.png" type="Texture" id=11]
[ext_resource path="res://world/markers/Markers.tres" type="TileSet" id=12]
[ext_resource path="res://world/map_generated/wallblades/WallBlades_4.png" type="Texture" id=13]
[ext_resource path="res://world/foreground/Foreground.tscn" type="PackedScene" id=14]
[ext_resource path="res://world/map_generated/wallblades/WallBlades_5.png" type="Texture" id=15]
[ext_resource path="res://enemy/enemyslime/EnemySlime.tscn" type="PackedScene" id=16]
[ext_resource path="res://world/door/DoorBack.gd" type="Script" id=17]
[ext_resource path="res://enemy/enemyogre/EnemyOgre.tscn" type="PackedScene" id=18]
[ext_resource path="res://enemy/enemylizardman/EnemyLizardMan.tscn" type="PackedScene" id=19]
[ext_resource path="res://player/Player.gd" type="Script" id=20]
[ext_resource path="res://enemy/ai/EnemyAI.gd" type="Script" id=21]
[ext_resource path="res://enemy/enemylizardman/EnemyLizardMan.gd" type="Script" id=22]
[ext_resource path="res://enemy/enemyfiend/EnemyFiend.gd" type="Script" id=23]
[ext_resource path="res://enemy/enemyogre/EnemyOgre.gd" type="Script" id=24]
[ext_resource path="res://enemy/enemyslime/EnemySlime.gd" type="Script" id=25]
[ext_resource path="res://world/map_generated/wallblades/WallBlades_0.png" type="Texture" id=26]
[ext_resource path="res://world/map_generated/wallblades/WallBlades_3.png" type="Texture" id=27]
[ext_resource path="res://world/overlay/Overlay.png" type="Texture" id=28]
[ext_resource path="res://world/overlay/fountain/FountainBlood.tres" type="Texture" id=29]
[ext_resource path="res://world/overlay/fountain/FountainWater.tres" type="Texture" id=30]
[ext_resource path="res://world/overlay/Overlay.tscn" type="PackedScene" id=31]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 10
frame_0/texture = ExtResource( 26 )
frame_0/delay_sec = 6.5
frame_1/texture = ExtResource( 9 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 11 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 27 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 13 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 15 )
frame_5/delay_sec = 2.0
frame_6/texture = ExtResource( 13 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 27 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 11 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 9 )
frame_9/delay_sec = 0.0

[sub_resource type="StreamTexture" id=2]
flags = 4

[sub_resource type="StreamTexture" id=3]
flags = 4

[sub_resource type="StreamTexture" id=4]
flags = 4

[sub_resource type="AnimatedTexture" id=5]
flags = 4
frames = 6
frame_0/texture = SubResource( 2 )
frame_0/delay_sec = 5.0
frame_1/texture = SubResource( 3 )
frame_1/delay_sec = 0.0
frame_2/texture = SubResource( 4 )
frame_2/delay_sec = 1.0
frame_3/texture = SubResource( 3 )
frame_3/delay_sec = 0.0
frame_4/texture = SubResource( 2 )
frame_4/delay_sec = 0.0
frame_5/delay_sec = 0.0

[sub_resource type="StreamTexture" id=6]
flags = 4

[sub_resource type="TileSet" id=7]
resource_local_to_scene = true
0/name = "AnimatedBarSide.tres 0"
0/texture = SubResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 1, 21, 20 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
3/name = "AnimatedTreasure.tres 3"
3/texture = SubResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 20, 20 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "treasure_potion.png 4"
4/texture = SubResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 20, 20 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "FountainWater.tres 5"
5/texture = ExtResource( 30 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 20, 40 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Overlay.png 6"
6/texture = ExtResource( 28 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 20, 40 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "FountainBlood.tres 7"
7/texture = ExtResource( 29 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 20, 40 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Overlay.png 8"
8/texture = ExtResource( 28 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 20, 0, 20, 20 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Overlay.png 9"
9/texture = ExtResource( 28 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 40, 0, 20, 20 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Overlay.png 10"
10/texture = ExtResource( 28 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 60, 0, 20, 20 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Overlay.png 11"
11/texture = ExtResource( 28 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 80, 0, 20, 20 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Overlay.png 12"
12/texture = ExtResource( 28 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 20, 20, 20, 20 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "Overlay.png 13"
13/texture = ExtResource( 28 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 40, 20, 20, 20 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "Overlay.png 14"
14/texture = ExtResource( 28 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 60, 20, 20, 20 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "Overlay.png 15"
15/texture = ExtResource( 28 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 60, 40, 20, 20 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0

[sub_resource type="TileSet" id=8]
resource_local_to_scene = true
0/name = "MiscTreasure.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, -20 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 20, 40 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "MiscTreasure.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, -20 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 20, 0, 20, 40 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "MiscTreasure.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, -20 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 40, 0, 20, 40 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "MiscTreasure.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, -20 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 60, 0, 20, 40 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "MiscTreasure.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, -20 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 80, 0, 20, 40 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "MiscTreasure.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, -20 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 100, 0, 20, 40 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "MiscTreasure.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, -20 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 120, 0, 20, 40 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "MiscTreasure.png 7"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, -20 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 140, 0, 20, 40 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "MiscTreasure.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, -20 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 160, 0, 20, 40 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "MiscTreasure.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, -20 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 180, 0, 20, 40 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "MiscTreasure.png 10"
10/texture = ExtResource( 3 )
10/tex_offset = Vector2( 0, -20 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 200, 0, 20, 40 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[node name="Level2" type="Navigation2D"]

[node name="Dungeon" parent="." instance=ExtResource( 8 )]
tile_data = PoolIntArray( 65536, 13, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 27, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 6, 0, 65548, 0, 0, 65549, 0, 0, 65550, 6, 0, 65551, 5, 0, 65552, 8, 0, 131072, 13, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 19, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 2, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 2, 0, 131087, 0, 0, 131088, 8, 0, 196608, 13, 0, 196609, 1, 0, 196610, 5, 0, 196611, 0, 0, 196612, 5, 0, 196613, 1, 0, 196614, 5, 0, 196615, 1, 0, 196616, 5, 0, 196617, 1, 0, 196618, 6, 0, 196619, 4, 0, 196620, 7, 0, 196621, 1, 0, 196622, 5, 0, 196623, 0, 0, 196624, 8, 0, 262144, 13, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 2, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 2, 0, 262159, 0, 0, 262160, 8, 0, 393215, 6, 0, 327680, 7, 0, 327681, 0, 0, 327682, 23, 0, 327683, 23, 0, 327684, 23, 0, 327685, 23, 0, 327686, 23, 0, 327687, 0, 0, 327688, 18, 0, 327689, 4, 0, 327690, 7, 0, 327691, 21, 0, 327692, 6, 0, 327693, 4, 0, 327694, 18, 0, 327695, 1, 0, 327696, 5, 0, 327697, 6, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 21, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 21, 0, 393223, 0, 0, 393224, 19, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 2, 0, 393229, 0, 0, 393230, 20, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 524287, 6, 0, 458752, 17, 0, 458753, 0, 0, 458754, 23, 0, 458755, 23, 0, 458756, 23, 0, 458757, 23, 0, 458758, 23, 0, 458759, 0, 0, 458760, 20, 0, 458761, 1, 0, 458762, 5, 0, 458763, 0, 0, 458764, 18, 0, 458765, 0, 0, 458766, 2, 0, 458767, 0, 0, 458768, 12, 0, 458769, 6, 0, 524288, 13, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 20, 0, 524301, 0, 0, 524302, 18, 0, 524303, 0, 0, 524304, 8, 0, 589824, 13, 0, 589825, 1, 0, 589826, 6, 0, 589827, 7, 0, 589828, 1, 0, 589829, 5, 0, 589830, 0, 0, 589831, 5, 0, 589832, 1, 0, 589833, 6, 0, 589834, 7, 0, 589835, 0, 0, 589836, 2, 0, 589837, 0, 0, 589838, 20, 0, 589839, 0, 0, 589840, 8, 0, 655360, 13, 0, 655361, 0, 0, 655362, 0, 0, 655363, 2, 0, 655364, 0, 0, 655365, 2, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 2, 0, 655371, 0, 0, 655372, 18, 0, 655373, 0, 0, 655374, 2, 0, 655375, 0, 0, 655376, 8, 0, 720896, 15, 0, 720897, 6, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 0, 0, 720904, 0, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 28, 0, 720909, 4, 0, 720910, 4, 0, 720911, 6, 0, 720912, 10, 0, 786439, 3, 0 )

[node name="Treasure" parent="." instance=ExtResource( 5 )]
tile_data = PoolIntArray( 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 196609, 0, 0, 196611, 0, 0, 196613, 0, 0, 196615, 0, 0, 196617, 0, 0, 196621, 0, 0, 196623, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 2, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327681, 0, 0, 327687, 0, 0, 327695, 0, 0, 393217, 0, 0, 393220, 1, 0, 393223, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393231, 0, 0, 458753, 0, 0, 458759, 0, 0, 458761, 0, 0, 458763, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524301, 0, 0, 524303, 0, 0, 589825, 0, 0, 589828, 0, 0, 589830, 0, 0, 589832, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589839, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0 )

[node name="Overlay" parent="." instance=ExtResource( 31 )]
z_index = 3
tile_set = SubResource( 7 )
tile_data = PoolIntArray( 65546, 11, 0, 65550, 11, 0, 196610, 6, 0, 196612, 6, 0, 196613, 0, 0, 196621, 0, 0, 458762, 6, 0, 458763, 0, 0, 524303, 0, 0, 589825, 0, 0, 589826, 6, 0, 589828, 0, 0 )

[node name="Markers" type="TileMap" parent="."]
z_index = 5
tile_set = ExtResource( 12 )
cell_size = Vector2( 20, 20 )
cell_quadrant_size = 40
format = 1
tile_data = PoolIntArray( 196613, 2, 0, 196621, 2, 0, 327691, 1, 0, 458751, 10, 0, 393218, 1, 0, 393222, 0, 0, 393233, 9, 0, 458763, 3, 0, 524303, 4, 0, 589825, 3, 0, 589828, 4, 0, 655367, 8, 0 )
script = ExtResource( 2 )

[node name="Foreground" parent="." instance=ExtResource( 14 )]
tile_data = PoolIntArray( 131074, 1, 0, 131076, 1, 0, 393226, 1, 0, 524290, 1, 0 )

[node name="DoorBack" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
cell_size = Vector2( 20, 20 )
cell_quadrant_size = 40
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( 65547, 3, 0, 720902, 3, 0 )
script = ExtResource( 17 )

[node name="DoorFore" type="TileMap" parent="."]
z_index = 10
tile_set = ExtResource( 10 )
cell_size = Vector2( 20, 20 )
cell_quadrant_size = 40
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( 11, 2, 0, 655366, 2, 0 )
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 150, 238 )
z_index = 7
script = ExtResource( 20 )

[node name="EnemyAI" type="Node2D" parent="."]
position = Vector2( -1, 0 )
script = ExtResource( 21 )

[node name="EnemyFiend" parent="EnemyAI" instance=ExtResource( 7 )]
position = Vector2( 30, 53 )
z_index = 8
script = ExtResource( 23 )

[node name="EnemyLizardMan" parent="EnemyAI" instance=ExtResource( 19 )]
position = Vector2( 330, 128 )
z_index = 8
script = ExtResource( 22 )

[node name="EnemyOgre" parent="EnemyAI" instance=ExtResource( 18 )]
position = Vector2( 9, 132 )
z_index = 8
script = ExtResource( 24 )

[node name="EnemySlime" parent="EnemyAI" instance=ExtResource( 16 )]
position = Vector2( 309, 52 )
z_index = 8
script = ExtResource( 25 )

[node name="MapGenerated" parent="." instance=ExtResource( 1 )]

[node name="WallBlades" parent="MapGenerated" index="0"]
z_index = 2
z_as_relative = false

[node name="MagicWalls" parent="MapGenerated" index="2"]
z_index = 5

[node name="MiscTreasure" parent="MapGenerated" index="3"]
tile_set = SubResource( 8 )

[editable path="MapGenerated"]
